<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    tools:context=".ScanDocumentActivity">

    <ImageView
        android:id="@+id/btn_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:padding="10dp"
        android:src="@drawable/ic_arrow_left" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="442dp"
        android:layout_marginStart="39dp"
        android:layout_marginTop="79dp"
        android:layout_marginEnd="39dp"
        android:background="#ffffff"
        android:elevation="10dp"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/btn_continue"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="45dp"
            android:gravity="center"
            android:text="@string/scan_document"
            android:textColor="#000000"
            android:textSize="19sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="17dp"
            android:layout_marginTop="45dp"
            android:layout_marginEnd="17dp"
            android:gravity="center"
            android:text="@string/now_place_your_phone_directly_on_top_of_your_document_so_we_can_connect_securely"
            android:textColor="#757373"
            android:textSize="14sp" />

        <ImageView
            android:id="@+id/img_doc"
            android:layout_width="182dp"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_passport_scan" />
    </LinearLayout>

    <Button
        android:id="@+id/btn_continue"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="32dp"
        android:background="@drawable/blue_bordered_baclground"
        android:text="@string/continue_key"
        android:textColor="@color/blue_primary"
        android:textSize="22sp"
        android:textAllCaps="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>